.happypack/s--426426468
SyntaxError: Expected corresponding JSX closing tag for <Helmet> (81:6)

[0m [90m 79 | [39m        [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m 80 | [39m        
[31m[1m>[22m[39m[90m 81 | [39m      [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m    | [39m      [31m[1m^[22m[39m
 [90m 82 | [39m    )
 [90m 83 | [39m  }
 [90m 84 | [39m}[0m

BabelLoaderError: SyntaxError: Expected corresponding JSX closing tag for <Helmet> (81:6)

[0m [90m 79 | [39m        [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m 80 | [39m        
[31m[1m>[22m[39m[90m 81 | [39m      [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m    | [39m      [31m[1m^[22m[39m
 [90m 82 | [39m    )
 [90m 83 | [39m  }
 [90m 84 | [39m}[0m

    at transpile (/home/spineor/Documents/risorso /newSetup_frontend/risorso/node_modules/babel-loader/lib/index.js:64:13)
    at Object.module.exports (/home/spineor/Documents/risorso /newSetup_frontend/risorso/node_modules/babel-loader/lib/index.js:174:20)
    at applySyncOrAsync (/home/spineor/Documents/risorso /newSetup_frontend/risorso/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/spineor/Documents/risorso /newSetup_frontend/risorso/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/spineor/Documents/risorso /newSetup_frontend/risorso/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/spineor/Documents/risorso /newSetup_frontend/risorso/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/spineor/Documents/risorso /newSetup_frontend/risorso/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/spineor/Documents/risorso /newSetup_frontend/risorso/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/spineor/Documents/risorso /newSetup_frontend/risorso/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/spineor/Documents/risorso /newSetup_frontend/risorso/node_modules/happypack/lib/HappyWorker.js:32:3)